# stockalert

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONFIG.md  Dockerfile  README.md  alembic.ini  common_query.sql  docker-compose.yml  pyproject.toml  stock-alert-help.txt  stock-system-workflow.txt  test_divergence_debug.py
.claude/: launch.json  settings.json
app/: README.md  config.py  main_api.py  main_api.py.backup
configs/: alert_breakout.yaml  alert_macross.yaml  all_adx_htf.yaml  all_baseline.yaml  all_full.yaml  bo_bare.yaml  bo_ewt.yaml  bo_ewt_loose.yaml  bo_ewt_pro.yaml  bo_pro.yaml  bo_pro_ext.yaml  bo_rs_fresh.yaml  bollinger_mean_revert.yaml  canary.yaml  dv_bare.yaml  dv_bare_fresh.yaml  dv_pro.yaml  dv_pro_fresh.yaml  dyn_breakout.yaml  dyn_breakout_deep.yaml  dyn_breakout_ranked.yaml  dyn_breakout_v2.yaml  dyn_breakout_v2_full.yaml  dyn_breakout_v2_gate.yaml  dyn_breakout_v2_top125.yaml  dyn_breakout_v2_top50.yaml  dyn_breakout_v2_top50_brake.yaml  dyn_breakout_v2_top50_brakef.yaml  dyn_longshort.yaml  ema_crossover.yaml  ew_oos_fresh.yaml  ew_rs_fresh.yaml  ew_w3.yaml  ew_w35_long.yaml  ew_w3_hiconf.yaml  ew_w3_long.yaml  liquid_universe.txt  llm_agent.yaml  llm_agent_smoke.yaml  mtf_ema_trend_filtered.yaml  (+39 more)
data/: market_events_seed.json  watchlist.json
docs/: ARCHITECTURE.md  AUTH_NEXT_STEPS.md  (+55 more)
stockalert/: .env  .env.example  ARCHITECTURE.md  CONFIG.md  ISSUES.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  storage_plan.md
stockalert/alembic/: env.py
stockalert/alembic/versions/: 361419077683_initial_tables.py
stockalert/api_docs/: account_access_api.md  streamer_api.md
stockalert/app/: backfill.py  backtester.py  config.py  db.py  detect_divergence.py  divergence.py  main_api.py  models.py  streamer.py
stockalert/app/api/: routes_backfill.py  routes_instruments.py  routes_journal.py  routes_market.py  routes_monitors.py  routes_movers.py  routes_signals.py  routes_watchlist.py
stockalert/app/data/: __init__.py
stockalert/app/db/: __init__.py  batcher.py  client.py  init.py  journal_repo.py  lake_watermarks.py  queries.py  watchlist_repo.py
stockalert/app/indicators/: README.md  macd.py  tsi.py
stockalert/app/providers/: alpaca_provider.py  base.py  polygon_flatfiles.py  polygon_provider.py  schwab_provider.py
stockalert/app/services/: backfill_service.py  backtest_service.py  flatfiles_backfill.py  flatfiles_sinks.py  historical_loader.py  iceberg_catalog.py  journal_parser.py  journal_sync.py  lake_archive.py  monitor_manager.py  monitor_service.py  nightly_lake_refresh.py  nightly_schwab_refresh.py  pnl.py  s3_lake_client.py  watchlist_service.py
stockalert/app/services/bronze/: README.md  __init__.py  gaps.py  sink.py  tables.py
stockalert/app/services/ingest/: nightly_polygon_refresh.py
stockalert/app/services/journal/: journal_sync.py
stockalert/app/services/legacy/: README.md
stockalert/app/services/live/: monitor_service.py
stockalert/app/signals/: README.md  divergence.py
stockalert/app/static/: dashboard.html  journal.html  symbol.html
stockalert/docs/: ARCHITECTURE.md  BUILD_JOURNAL.md  README.md  STARTUP_FLOW.md  data_platform_plan.md  trading-ai-build-plan.md
stockalert/paper-trade/: sim.py
stockalert/scripts/: README.md  _smoke_deep_dispatch.py  _smoke_dual_sink.py  _smoke_parquet_roundtrip.py  bronze_import_athena.py  bronze_import_polygon_minute.py  ch_verify.sh  check_polygon_flatfiles.py  check_s3_lake.py  polygon_bronze_backfill.py  polygon_flatfiles_bulk_backfill.py  schwab_get_refresh_token.py  schwab_lake_backfill.py  schwab_seed_backfill.py  stream_schwab_bars.py  test_polygon_live.py  test_schwab_live.py
stockalert/tests/: conftest.py  test_backfill_service.py  test_bars_resample.py  test_bronze_gaps.py  test_database_alert.py  test_flatfiles_backfill.py  test_flatfiles_sinks.py  test_gap_fill.py  test_indicators.py  test_journal.py  test_journal_parser.py  test_lake_archive.py  test_lake_watermarks.py  test_monitors_manual.py  test_nightly_lake_refresh.py  test_pnl.py  test_polygon_flatfiles.py  test_polygon_provider.py  test_routes_instruments.py  test_s3_lake_client.py  test_schwab_provider.py  test_seed_universe.py  test_watchlist_repo.py  test_watchlist_service.py  test_websocket.py
stockalert/tests/integration/: test_bronze_sink.py  test_iceberg_connectivity.py  test_schwab_bronze.py
(+788 files in other folders)
